tests/test_files/invalid/syntax/instance_invalid_attribute_value.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Location warehouse1
    id: 5123123not_an_identifier
End
